# ai-readme-improver

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.es.md  README.improved.md  README.md  action.yml  config.yaml  improver.py  logger.py  main.py  mkdocs.yml  openai_helper.py  post_comment.py  pyproject.toml  readme-improver.config.yaml  readme_loader.py  requirements.txt  run_improver.py  suggestions.md
.github/: PULL_REQUEST_TEMPLATE.md
docs/: api_reference.md  architecture.md  index.md  workflow_instructions.md
examples/: README_after.md  README_before.md
logs/: 20250608_223604.json  20250608_223608.json  20250608_223609.json  20250608_235557.json  20250608_235600.json  20250608_235601.json  20250609_000146.json  20250609_010227.json  20250609_010230.json  20250609_010232.json  20250609_020620.json  20250609_020624.json  20250609_020626.json  20250609_020627.json  20250609_020628.json  20250609_020629.json  20250609_020630.json  20250609_020632.json  20250609_020634.json  20250609_020635.json  20250609_021953.json  20250609_021956.json  20250609_021957.json  20250609_021958.json  20250609_021959.json  20250609_022000.json  20250609_022001.json
prompts/: acknowledgements.prompt  configuration.prompt  contact.prompt  contributing.prompt  demo.prompt  features.prompt  generate_api_reference.prompt  installation.prompt  license.prompt  maintainers.prompt  summarize_usage_logs.prompt  toc.prompt  update_badges.prompt  update_changelog.prompt  update_installation.prompt  update_usage.prompt  (+1 more)
(+31 files in other folders)
