[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-readme-improver"
version = "0.1.0"
description = "CLI tool to improve README files using OpenAI"
authors = [{name = "Hamza", email = "hamzahabib10@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai",
    "python-dotenv",
    "markdown2",
    "PyYAML"
]


[tool.setuptools]
packages = ["readme_improver"]
py-modules = [
    "run_improver",
]

[project.scripts]
readme-improver = "run_improver:main"
